# grafiek_lib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
grafiek_egui/: Cargo.toml  index.html
grafiek_egui/src/: app.rs  consts.rs  keybinds.rs  logging.rs  main.rs  transactions.rs
grafiek_egui/src/components/: close_prompt.rs  engine_ext.rs  image_picker.rs  menu_bar.rs  mod.rs
grafiek_egui/src/components/panels/: bottom_panel.rs  engine_panel.rs  inspect_node.rs  io_panel.rs  minimap.rs  mod.rs  settings.rs
grafiek_egui/src/components/snarl/: background.rs  mod.rs  pin.rs  style.rs
grafiek_egui/src/components/value/: code_editor.rs  image_preview.rs  mod.rs
grafiek_engine/: Cargo.toml
grafiek_engine/src/: consts.rs  document.rs  engine.rs  error.rs  execution_context.rs  gpu_pool.rs  history.rs  lib.rs  node.rs  registry.rs  traits.rs  value.rs
grafiek_engine/src/ops/: mod.rs
grafiek_engine/src/ops/graphics/: mod.rs  shade.rs  tweak_shader_template.rs
grafiek_engine/src/ops/graphics/glsl/: grayscale.glsl
grafiek_engine/src/ops/math/: arithmetic.rs  mod.rs
grafiek_engine/src/ops/system/: comment.rs  input.rs  mod.rs  output.rs  probe.rs
grafiek_engine/src/registry/: consts.rs  mod.rs  signature.rs  slot.rs
grafiek_engine/tests/: common.rs  messages.rs  operations.rs  search.rs
grafiek_engine/tests/fixtures/: invalid.grfk
schema_derive/: Cargo.toml
schema_derive/src/: lib.rs
schema_derive/tests/: compile_tests.rs  tests.rs
schema_derive/tests/ui/fail/: fail_input_on_enum.stderr  fail_on_enum.rs  fail_on_enum.stderr  fail_on_tuple_struct.rs  fail_on_tuple_struct.stderr  fail_schema_enum_non_unit.rs  fail_schema_enum_non_unit.stderr  fail_schema_enum_on_struct.rs  fail_schema_enum_on_struct.stderr
schema_derive/tests/ui/pass/: config_schema.rs  config_with_range.rs  enum.rs  enum_member.rs  enum_with_custom_default.rs  input_schema.rs  output_schema.rs
