[package]
name = "grafiek_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
grafiek_engine = { path = "../grafiek_engine" }
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = false, features = ["default_fonts", "wgpu", "wayland", "x11"] }
wgpu = { version = "27", default-features = false, features = ["metal", "vulkan", "dx12", "wgsl", "glsl"] }
egui_logger = "0.9.0"
egui-notify = "0.21.0"
egui-snarl = { version = "0.9" , git = "https://github.com/mobile-bungalow/egui-snarl" }
egui_code_editor = "0.2"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
serde_json = "1.0"
image.workspace = true


[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", default-features = false, features = ["webgpu", "wgsl", "glsl"] }
