[package]
name = "grafiek_egui"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["rfd", "env_logger", "eframe/wayland", "eframe/x11", "wgpu/metal", "wgpu/vulkan", "wgpu/dx12"]
web = ["wasm-bindgen-futures", "web-sys", "wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
anyhow = "1.0.100"
grafiek_engine = { path = "../grafiek_engine" }
egui = "0.33.2"
eframe = { version = "0.33.2", default-features = false, features = ["default_fonts", "wgpu"] }
wgpu = { version = "27", default-features = false, features = ["wgsl", "glsl"] }
egui_logger = "0.9.0"
egui-notify = "0.21.0"
egui-snarl = { version = "0.9", git = "https://github.com/mobile-bungalow/egui-snarl" }
egui-phosphor = { version = "0.11", features = ["regular"] }
egui_code_editor = { git = "https://github.com/mobile-bungalow/egui_code_editor" }
log = "0.4"
serde_json = "1.0"
image.workspace = true

# Native-only dependencies
rfd = { version = "0.15", optional = true }
env_logger = { version = "0.11", optional = true }

# Web-only dependencies
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "console",
    "Window",
    "Document",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "FileReader",
] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "27", default-features = false, features = ["webgpu", "wgsl", "glsl"] }
