[package]
name = "grafiek_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
thiserror.workspace = true
log.workspace = true
petgraph.workspace = true
wgpu.workspace = true
arrayvec = { version = "0.7.6", features = ["serde"] }

[dev-dependencies]
pollster.workspace = true
