[package]
name = "grafiek_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
serde.workspace = true
thiserror.workspace = true
log.workspace = true
petgraph.workspace = true
wgpu.workspace = true
arrayvec = { version = "0.7.6", features = ["serde"] }
parameter_schema_derive = { path = "../schema_derive" }
tweak_shader = { git = "https://github.com/mobile-bungalow/tweak_shader" }

[dev-dependencies]
pollster.workspace = true
